# SMKR

./: .gitignore  NOTICE  README.md  pyproject.toml  run.bat
MITMScript/: RFN完整说明.md
MITMScript/Function/: .gitkeep  CapabilityDemo.rfn  LiveSmoke.rfn  ShopQuery.rfn
MITMScript/Manifest/: CapabilityDemo.rfnmanifest  LiveSmoke.rfnmanifest  ShopQuery.rfnmanifest
config/: decoder_overrides.json  messages.json  opcodes.json  settings.json
config/templates/: YX.json
scripts/: clean.ps1  run_divert.ps1  run_web.ps1
src/roco_mitm/: __init__.py  cli.py  paths.py  selftest.py
src/roco_mitm/codec/: __init__.py  opcode_pack.py  opcode_payload.py  opcode_registry.py
src/roco_mitm/divert/: __init__.py  connection_watcher.py  proc_divert.py
src/roco_mitm/proxy/: __init__.py  crypto.py  perf.py  protocol.py  server.py  session.py  wire_builder.py
src/roco_mitm/rfn/: __init__.py  assembler.py  errors.py  host.py  importer.py  live.py  manifest.py  model.py  paths.py  reader.py  runtime.py  vm.py
src/roco_mitm/web/: __init__.py  app.py  event_bus.py  mcp.py
src/roco_mitm/web/static/: index.html
tests/: test_codec.py  test_decode_fallback.py  test_mcp_service.py  test_opcode_pack.py  test_proc_divert.py  test_proxy_perf_options.py  test_rfn_capabilities.py  test_rfn_capability_matrix.py  test_rfn_instruction_set.py  test_rfn_live_integration.py  test_rfn_web_api.py  test_selftest.py  test_session_baseline.py  test_settings.py  test_wire_builder.py
tools/: gen_proto_schema.py  pack_opcode_schemas.py  verify_rfn_session_rotate.py
(+8 files in other folders)
